tests/valid/Dictionary_Valid_2.whiley
{int->int} f(int x):
    return {1->x, 3->2}

void main([string] args):
    println(str(f(1)))
    println(str(f(2)))
    println(str(f(3)))
